# TelstraCallToCSV

./: INSTRUCTIONS.md  README.md  config.py  main.py  pyproject.toml
src/telstracalltocsv/: __main__.py
